Improve maven profiles to allow 17 CI